--- a/app/src/main/res/layout/include_list_viewpager.xml
+++ b/app/src/main/res/layout/include_list_viewpager.xml
@@ -46,7 +46,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="com.support.android.designlibdemo.FABAwareScrollingViewBehavior" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -54,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_done"
-        app:layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior" />
+        android:src="@drawable/ic_done" />
 
 </android.support.design.widget.CoordinatorLayout>
